--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ application/cache/*
 !application/cache/index.html
 !application/cache/.htaccess
 
-application/config/*
+application/config/config.php
+application/config/database.php
 
 application/logs/*
 !application/logs/index.html
